--- a/style/style.css
+++ b/style/style.css
@@ -7,3 +7,103 @@
   font-weight: <weight>;
   font-style: normal;
 }
+.backgroud-pic{
+    background-image: url(../image/Hero-bg.png);
+}
+.banner-btn{
+    background-color:rgba(13, 19, 33, 1);
+    color: white;
+    font-size:20px ;
+    border-radius: 5px;
+    padding:20px 25px;
+ font-weight: bold;
+ border-color: rgba(13, 19, 33, 1);
+    
+}
+.banner-title{
+ font-size: bold;
+}
+.banner-2{
+    width: 80%;
+    
+    margin: 40px auto;
+    border-radius: 4px;
+    box-shadow: 5px 5px 8px 8px rgba(0,0,0,0.1);
+     
+    align-items: center;
+}
+.s-banner-2{
+     
+}    
+.ban-2{
+    text-align: center;
+    border-radius:16px;
+}
+.group-1{
+    display: flex;
+}
+.group-2{
+    display: flex;
+}
+.group-3{
+    display: flex;
+}
+.font-style{
+    font-display: rgba(13, 19, 33, 1);
+}
+
+.banner-target{
+    display: flex;
+    width: 80%;
+    margin: 40px auto;
+    border-radius: 16px;
+    box-shadow: 5px 5px 8px rgba(13, 19, 33, 0.15);
+    padding: 20px;
+    align-items: center;
+}
+
+
+.banner-3{
+    display: flex;
+    justify-content: space-between;
+    width: 1100px;
+    height: 300px;
+   padding: 24px;
+ 
+   
+}
+.sbanner-31{
+    padding: 10px;
+    width: 290px;
+    height: 220px;
+    background-color: rgba(255, 76, 30, 0.05);
+    border-radius: 15px;
+}
+.sbanner-32{
+    background-color: rgba(235, 235, 235, 1);
+     
+    padding: 10px;
+    width: 290px;
+    height: 220px;
+}
+.sbanner-33{
+    background-color: rgba(255, 223, 0, 0.05);
+     
+    padding: 10px;
+    width: 290px;
+    height: 220px;
+}
+ .ban-img2{
+    background-image: url(../image/handshake.jpg);
+    width: 100%;
+    height: 50%;
+ }
+ .ban-t{
+    
+    padding: 64px 48px;
+    
+ }
+ .icon{
+    display: flex;
+    justify-content: space-between;
+ }
