--- a/style/style.css
+++ b/style/style.css
@@ -34,7 +34,7 @@
     
     margin: 40px auto;
     border-radius: 4px;
-    box-shadow: 5px 5px 8px 8px rgba(0,0,0,0.1);
+    
      
     align-items: center;
 }
@@ -64,8 +64,9 @@
     margin: 40px auto;
     border-radius: 16px;
     box-shadow: 5px 5px 8px rgba(13, 19, 33, 0.15);
-    padding: 20px;
+    padding: 24px;
     align-items: center;
+    border-color: rgba(13, 19, 33, 0.2);
 }
 
 
